--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "esbuild": "^0.25.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "^5.8.2",
-    "vite": "^6.2.0",
+    "vite": "^6.2.5",
     "vitepress": "^1.6.3",
     "vue-tsc": "^2.2.8"
   }
